--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
       <table border="1" bordercolor="black" cellpadding="7" cellspacing="4" width="80%" bgcolor="#66ffff">
     <caption>marklist</caption>
     <tr>
-    <th>MODEL</th>
-    <th>RAM</th>
-    <th>STORAGE</th>
-    <th>PRICE</th>
+    <th>VAISHNAV VIJAYAN(NA19CSTR26)</th>
     </tr>
 
     <tr>
