--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <th>VAISHNAV VIJAYAN(NA19CSTR26)</th>
     </tr>
 
+    <tr>
+     <th>course title</th>
+     <th>Mark Awarded</th>
+     <th>Maximum</th>
+     <th>Result</th>
+    </tr>
  
 
     </table>
