--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
      <th>Maximum</th>
      <th>Result</th>
     </tr>
+     
+     <tr>
+     <th>course title</th>
+     <th>IA</th>
+     <th>ESE</th>
+     <th>Total Marks</th>
+     <th>Maximum</th>
+     <th>Result</th>
+    </tr>
  
 
     </table>
