--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       <table border="1" bordercolor="black" cellpadding="7" cellspacing="4" width="80%" bgcolor="#66ffff">
     <caption>marklist</caption>
     <tr>
-    <th colspan="4">VAISHNAV VIJAYAN(NA19CSTR26)</th>
+    <th colspan="6">VAISHNAV VIJAYAN(NA19CSTR26)</th>
     </tr>
 
     <tr>
      <th>course title</th>
-     <th>Mark Awarded</th>
+     <th colspan="3">Mark Awarded</th>
      <th>Maximum</th>
      <th>Result</th>
     </tr>
