--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
     </tr>
 
     <tr>
-     <th>course title</th>
+     <th rowspan="2">course title</th>
      <th colspan="3">Mark Awarded</th>
-     <th>Maximum</th>
-     <th>Result</th>
+     <th rowspan="2">Maximum</th>
+     <th rowspan="2">Result</th>
     </tr>
      
      <tr>
-     <th>course title</th>
      <th>    IA    </th>
      <th>   ESE    </th>
      <th>Total Marks</th>
-     <th>Maximum</th>
-     <th>Result</th>
+     
     </tr>
  
 
