--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
      <tr>
      <th>    IA    </th>
      <th>   ESE    </th>
-     <th>Total Marks</th>
+     <th>Total Marks</th>  
+    </tr>
      
+    <tr>
+    <td>Paper 1</td>
+    <td>10</td>
+    <td>38</td>
+    <td>48</td>
+    <td>50</td>
+    <td>P</td>
     </tr>
  
 
