--- a/index.html
+++ b/index.html
@@ -31,7 +31,32 @@
     <td>50</td>
     <td>P</td>
     </tr>
- 
+
+   <tr>
+    <td>Paper 2</td>
+    <td>9</td>
+    <td>30</td>
+    <td>49</td>
+    <td>50</td>
+    <td>P</td>
+    </tr>
+
+   
+ <tr>
+    <td>Paper 3</td>
+    <td>10</td>
+    <td>40</td>
+    <td>40</td>
+    <td>50</td>
+    <td>P</td>
+    </tr>
+
+   <tr>
+    <td colspan="3">Total Marks</td>
+    <td>137</td>
+    <td>150</td>
+    <td>P</td>
+    </tr>
 
     </table>
 
