--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>marklist</title>
 </head>
 <body>
-      <table border="1" bordercolor="black" cellpadding="7" cellspacing="4" width="80%" bgcolor="#66ffff">
+      <table border="1" bordercolor="black" cellpadding="7" cellspacing="4" width="80%">
     <caption>marklist</caption>
     <tr>
     <th colspan="6">VAISHNAV VIJAYAN(NA19CSTR26)</th>
@@ -52,10 +52,10 @@
     </tr>
 
    <tr>
-    <td colspan="3">Total Marks</td>
-    <td>137</td>
-    <td>150</td>
-    <td>P</td>
+    <th colspan="3">Total Marks</th>
+    <th>137</td>
+    <th>150</td>
+    <th>P</td>
     </tr>
 
     </table>
