--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <th colspan="6" bgcolor="lightblue">VAISHNAV VIJAYAN(NA19CSTR26)</th>
     </tr>
 
-    <tr>
+    <tr bgcolor="lightblue" >
      <th rowspan="2">course title</th>
      <th colspan="3">Mark Awarded</th>
      <th rowspan="2">Maximum</th>
