--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <th rowspan="2">Result</th>
     </tr>
      
-     <tr>
+     <tr bgcolor="lightblue" >
      <th>    IA    </th>
      <th>   ESE    </th>
      <th>Total Marks</th>  
