--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </tr>
      
      <tr bgcolor="lightblue" >
-     <th>    IA    </th>
+     <th align=right>    IA    </th>
      <th>   ESE    </th>
      <th>Total Marks</th>  
     </tr>
