--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </tr>
      
      <tr bgcolor="lightblue" >
-     <th align=right>    IA    </th>
+     <th>    IA    </th>
      <th>   ESE    </th>
      <th>Total Marks</th>  
     </tr>
@@ -52,7 +52,7 @@
     </tr>
 
    <tr>
-    <th colspan="3">Total Marks</th>
+    <th colspan="3" align=left>Total Marks</th>
     <th>137</td>
     <th>150</td>
     <th>P</td>
