--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <th>Total Marks</th>  
     </tr>
      
-    <tr align=right>
+    <tr align=center>
     <td>Paper 1</td>
     <td>10</td>
     <td>38</td>
