--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <td>P</td>
     </tr>
 
-   <tr>
+   <tr align=center >
     <td>Paper 2</td>
     <td>9</td>
     <td>30</td>
@@ -42,7 +42,7 @@
     </tr>
 
    
- <tr>
+ <tr align=center >
     <td>Paper 3</td>
     <td>10</td>
     <td>40</td>
