--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </tr>
 
    <tr>
-    <th colspan="3" align=left>Total Marks</th>
+    <th colspan="3" align=center>Total Marks</th>
     <th>137</td>
     <th>150</td>
     <th>P</td>
